Fix bug where header was covering food search

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,7 @@ body {
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.492);
+  z-index: 100;
 }
 
 .error-text {
